package dev.cleysonph.smartgym.core.enums;

public enum MuscleGroup {

    DELTOIDS,
    BICEPS,
    OBLIQUES,
    QUADRICEPS,
    CHEST,
    FOREARM,
    ABS,
    ANKLE_FLEXORS,
    TRAPEZIUS,
    MIDDLE_BACK,
    LOWER_BACK,
    TRICEPS,
    BACK_OF_FOREARM,
    GLUTES,
    HAMSTRINGS,
    ANKLE_EXTENSORS;
    
}
