package dev.cleysonph.smartgym.core.enums;

public enum Role {

    ADMIN,
    INSTRUCTOR,
    CLIENT;
    
}
